# umlaramigro

./: FRONTEND_ESTRUTURA.txt
backend/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  locustfile.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  cf547709947f_create_all_tables_with_indexes.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py  database.py  mongodb.py  security.py  unit_of_work.py
backend/app/models/: __init__.py  interest_form.py  organization.py  pet.py  user.py
backend/app/repositories/: __init__.py  factory.py  interest_form_repository.py  mongodb_impl.py  organization_repository.py  pet_repository.py  user_repository.py
backend/app/routes/: __init__.py  auth.py  interest_forms.py  organizations.py  pets.py
backend/app/schemas/: __init__.py  interest_form.py  organization.py  pet.py  user.py
backend/app/services/: __init__.py  interest_form_service.py  organization_service.py  pet_service.py  user_service.py
backend/app/utils/: __init__.py  dependencies.py
backend/tests/: conftest.py  test_main.py
backend/tests/e2e/: test_criar_organizacao.py  test_login.py  test_organizacao.py  test_registro_usuario.py
backend/tests/unity/: test_login_usuario.py  test_registro_usuario.py
frontend/umlaramigo/: PETAPP_README.md  SETUP_GUIDE.md  package-lock.json  package.json
frontend/umlaramigo/app/: root.tsx  routes.ts
frontend/umlaramigo/app/interfaces/: index.ts  interest-form.interface.ts  login.interface.ts  pet.interface.ts
frontend/umlaramigo/app/routes/: home.tsx  login.tsx
frontend/umlaramigo/app/routes/dashboard/: index.tsx  layout.tsx
frontend/umlaramigo/app/routes/dashboard/pets/: index.tsx  novo.tsx
frontend/umlaramigo/app/routes/pets/: index.tsx
frontend/umlaramigo/app/services/: api-client.ts  auth.service.ts  index.ts  pet-service.ts
frontend/umlaramigo/app/store/: index.tsx
frontend/umlaramigo/app/store/slices/: authSlice.tsx  petSlice.tsx
