[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umlaramigo-api"
version = "1.0.0"
description = "API FastAPI para plataforma de doação de pets (cães e gatos)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Vinicius", email = "seu-email@example.com"},
]

dependencies = [
    "pymongo",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pydantic[email]",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "python-multipart==0.0.6",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
    
    # Load Testing
    "locust==2.17.0",
    
    # Code Quality & Linting
    "black==23.12.1",
    "flake8==6.1.0",
    "isort==5.13.2",
    "pylint==3.0.3",
    "mypy==1.7.1",
    
    # Debugging & Development
    "ipython==8.18.1",
    "ipdb==0.13.13",
    
    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.14",
]

test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
]

docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.14",
]

[project.urls]
Repository = "https://github.com/seu-usuario/umlaramigo"
"Bug Tracker" = "https://github.com/seu-usuario/umlaramigo/issues"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directórios
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
strict_optional = true
exclude = ["venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
